# photopack

./: CLAUDE.md  README.md
crates/cli/src/: main.rs
crates/cli/src/commands/: duplicates.rs  export.rs  ls.rs  mod.rs  pack.rs  sources.rs  status.rs  vault.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  manifest.rs  vault_save.rs
crates/core/src/catalog/: mod.rs  schema.rs
crates/core/src/hasher/: mod.rs  perceptual.rs
crates/core/src/matching/: confidence.rs  mod.rs
crates/core/tests/: vault_e2e.rs
