[package]
name = "losslessvault-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["turbojpeg"]
turbojpeg = ["dep:turbojpeg"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = { version = "0.10", features = ["asm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
turbojpeg = { version = "1.4", optional = true }
fast_image_resize = "6"
kamadak-exif = "0.5"
rayon = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
walkdir = "2"
